--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "moment": "^2.19.1",
     "react": "^16.0.0",
+    "react-datepicker": "^0.57.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "react-usa-map": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
